--- a/resources/assets/sass/_config.scss
+++ b/resources/assets/sass/_config.scss
@@ -17,6 +17,7 @@ $color_background: $color_white_smoke;
 $color_background_dark: $color_charleston_green;
 $color_background_white: $color_baby_powder;
 $color_background_grey: $color_platinum;
+$color_background_red: $color_vermilion;
 $color_text: $color_charleston_green;
 $color_text_white: $color_baby_powder;
 $color_link: $color_charleston_green;
