--- a/resources/assets/sass/_config.scss
+++ b/resources/assets/sass/_config.scss
@@ -11,14 +11,17 @@ $color_gainsboro: #DDDDDD;
 $color_white_smoke: #F4F4F4;
 $color_platinum: #E4E4E4;
 $color_fulvous: #E07C11;
+$color_trolley_grey: #7F7F7F;
 
 
 $color_background: $color_white_smoke;
 $color_background_dark: $color_charleston_green;
-$color_background_white: $color_baby_powder;
+$color_background_dark_grey: $color_trolley_grey;
 $color_background_grey: $color_platinum;
+$color_background_white: $color_baby_powder;
 $color_background_red: $color_vermilion;
 $color_text: $color_charleston_green;
+$color_text_grey: $color_trolley_grey;
 $color_text_white: $color_baby_powder;
 $color_link: $color_charleston_green;
 $color_link_hover: $color_vermilion;
