--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -119,7 +119,7 @@ header {
 	margin-bottom: 2rem;
 	background-color: $color_background_dark;
 	font-family: 'Lato', sans-serif;
-	padding: 3rem 0;
+	padding: 3rem 0 2rem 0;
 	text-align: center;
 
 	h1 {
@@ -153,8 +153,8 @@ header {
 			  	-webkit-border-radius: 50px;
 			       -moz-border-radius: 50px;
 			            border-radius: 50px;
-		    padding: 0.7rem 0.8rem;
-		    vertical-align: middle;
+			    padding: 0.7rem 0.8rem;
+			    vertical-align: middle;
 				margin-top: 1rem;
 				display: inline-block;
 			}
@@ -314,11 +314,11 @@ header {
 		
 	}
 
-	.lists-preview {
+	.cards-container {
 		text-align: left;
 		white-space: nowrap;
 
-		.preview-card {
+		.card {
 			width: 250px;
 			display: inline-block;
 			margin-right: 3rem;
@@ -467,53 +467,29 @@ header {
 			}
 
 			h5 {
-				color: gray;
+				color: $color_text_grey;
 				margin-top: 0;
 				margin-left: 1rem;
 
 				button {
 					float: right;
-					background-color: $color_link_alt_hover;
+					background-color: $color_link_hover;
 					color: $color_text_white;
 					margin-top: 1rem;
 					padding: 0.75rem 0.75rem;
 					border: 0;
 				}
 			}
-		}
 
-		.list-articles {
-			width: 100%;
-			margin-top: 1rem;
-			border-top: 1px solid $color_separation;
-			background-color: $color_background_white;
-
-			thead {
-				border-bottom: 1px solid $color_separation;
-
-				th {
-					text-align: center;
-					font-size: 2rem;
-				}
-			}
-
-			.article-detail {
-				border-bottom: 1px solid $color_separation;
-
-				.article-count {
-					width: 6rem;
-
-					div {
-						height: 6rem;
-						text-align: center;
-
-						span {
-							display: block;
-							font-size: 2rem;
-							line-height: 2rem;
-							padding-top: 2rem;
-						}
-					}
+			h6 {
+				span.label {
+					color: $color_text_white;
+					background-color: $color_background_dark_grey;
+					letter-spacing: 0.5px;
+				  	-webkit-border-radius: 50px;
+				       -moz-border-radius: 50px;
+				            border-radius: 50px;
+				    padding: 0.5rem 0.7rem;
 				}
 			}
 		}
