--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -136,6 +136,21 @@ header {
 
 	form {
 
+		/* default style for when the plugins haven't loaded yet */
+		> .tags-input {
+			display: inline-block;
+			width: 80%;
+			height: 4.6rem;
+			max-width: 800px;
+			padding: 1.2rem;
+			padding-left: 1.8rem;
+			border: 0px solid transparent;
+		  	-webkit-border-radius: 24px;
+		       -moz-border-radius: 24px;
+		            border-radius: 24px;
+			text-align: left;
+		}
+
 		.bootstrap-tagsinput {
 			width: 80%;
 			max-width: 800px;
@@ -153,8 +168,8 @@ header {
 			  	-webkit-border-radius: 50px;
 			       -moz-border-radius: 50px;
 			            border-radius: 50px;
-		    padding: 0.7rem 0.8rem;
-		    vertical-align: middle;
+			    padding: 0.7rem 0.8rem;
+			    vertical-align: middle;
 				margin-top: 1rem;
 				display: inline-block;
 			}
@@ -164,8 +179,8 @@ header {
 			}
 
 			.tt-empty {
-			  padding: 3px 20px;
-			  line-height: 24px;
+				padding: 3px 20px;
+				line-height: 24px;
 				font-style: italic;
 
 				&> span {
