--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,4 +11,4 @@
 @import '../css/theme.css';
 @import '../css/mCustomScrollbar.min.css';
 @import '../css/browserfix.css';
-@import '../css/normalize.css';
+@import '~normalize.css';
