--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -23,7 +23,6 @@ body {
 
 main {
 	margin-bottom: 2rem;
-	text-align: -moz-center;
 }
 
 /* HEADER
@@ -378,7 +377,7 @@ header {
 
 			.card-body {
 				padding: 1.5rem;
-				text-align: center;
+				text-align: left;
 				word-wrap: break-word;
 				height: 160px;
 				overflow: hidden;
