start css for create-list

--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -632,3 +632,9 @@ footer {
     color: #FFF;
 }
 
+/* CREATE LIST PAGE
+–––––––––––––––––––––––––––––––––––––––––––––––––– */
+
+.title-create-list {
+  text-align: center;
+}
