--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -447,17 +447,21 @@ header {
                 }
             }
 
-            button {
+            button, a {
+            	display: inline-block;
                 width: 100%;
                 border: 0;
                 padding: 0.75rem;
                 background-color: transparent;
                 font-size: 1.6rem;
                 color: $color_link_hover;
+                text-align: center;
+                text-decoration: none;
 
-                &:hover {
+                &:hover, &:active, &:focus {
                     background-color: $color_background_grey;
                     color: $color_text;
+                	text-decoration: none;
                 }
             }
 
