--- a/resources/assets/sass/theme.scss
+++ b/resources/assets/sass/theme.scss
@@ -482,29 +482,37 @@ header {
         }
 
         .list-header {
+        	margin-bottom: 2rem;
 
             h1 {
                 margin-bottom: 0;
-
-                div {
-                    float: right;
-                }
+                overflow-wrap: break-word;
             }
 
             h5 {
                 color: $color_text_grey;
                 margin-top: 0;
                 margin-left: 1rem;
-
-                button {
-                    float: right;
-                    background-color: $color_background_red;
-                    color: $color_text_white;
-                    margin-top: 1rem;
-                    padding: 0.75rem 0.75rem;
-                    border: 0;
-                }
             }
+
+            .col-md-4 {
+            	text-align: center;
+
+            	h1 {
+            		text-align: center;
+                	overflow-wrap: none;
+            	}
+
+            	button {
+	            	font-size: 2rem;
+	                background-color: $color_background_red;
+	                color: $color_text_white;
+	                margin-top: 1rem;
+	                padding: 0.75rem 0.75rem;
+	                border: 0;
+	            }
+            }
+            
         }
 
         .list-images {
